[tool.poetry]
name = "eco"
version = "0.1.0"
description = ""
authors = ["atabekdemurtaza <mychannel21war@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
thor-devkit = "^1.0.14"
django-rest-framework = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
